--- a/notebooks/prep/230_load_&_prep_Fantasy1415.ipynb
+++ b/notebooks/prep/230_load_&_prep_Fantasy1415.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "4       5    0    0   0    3      -      2              -           -   0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "SEA1415['Apps'] = SEA1415['Start'] + SEA1415['CO']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "SEA1415['Form'] = SEA1415['Points']/SEA1415['Apps']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "SEA1415.loc[SEA1415['Form'].isnull(),'Form'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -475,10 +508,12 @@
        "Goals conceded      0\n",
        "Conceded 1+         0\n",
        "OG                  0\n",
+       "Apps                0\n",
+       "Form                0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -501,29 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "SEA1415['Apps'] = SEA1415['Start'] + SEA1415['CO']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "SEA1415['Form'] = SEA1415['Points']/SEA1415['Apps']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +566,7 @@
       "Conceded 1+       3045 non-null object\n",
       "OG                3045 non-null int64\n",
       "Apps              3045 non-null int64\n",
-      "Form              2632 non-null float64\n",
+      "Form              3045 non-null float64\n",
       "dtypes: float64(1), int64(12), object(8)\n",
       "memory usage: 499.6+ KB\n"
      ]
@@ -565,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -580,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -605,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1489,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Roli</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1501,7 +1514,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Jonathan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1526,7 +1539,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Dylan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1551,7 +1564,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Steve</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1576,7 +1589,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Clement</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1601,7 +1614,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Teddy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1626,7 +1639,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Baptiste</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1651,7 +1664,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Marc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1676,7 +1689,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Jean-Kevin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1701,7 +1714,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Dominik</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1726,7 +1739,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Benoit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1751,7 +1764,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Anthony</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1801,7 +1814,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Nicolas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1826,7 +1839,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Florian</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1851,7 +1864,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Romain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1876,7 +1889,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Yoan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1901,7 +1914,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Hamadou</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1926,7 +1939,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Mihai</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1951,7 +1964,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Paulo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1976,7 +1989,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Yassine</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2001,7 +2014,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Brice</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2026,7 +2039,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Zana</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2051,7 +2064,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Jeff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2076,7 +2089,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Dimitry</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2126,7 +2139,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Maxime</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2435,33 +2448,33 @@
        "Giroud         O                          0            0   0    27  4.407407   \n",
        "Diouf          M                          0            0   0    34  3.500000   \n",
        "...                                     ...          ...  ..   ...       ...   \n",
-       "Sa             R                          0            0   0     0       NaN   \n",
-       "Beaulieu       J                          0            0   0     0       NaN   \n",
-       "Mboumbouni     D                          0            0   0     0       NaN   \n",
-       "Shamal         S                          0            0   0     0       NaN   \n",
-       "Badin          C                          0            0   0     0       NaN   \n",
-       "Chaouche       T                          0            0   0     0       NaN   \n",
-       "Valette        B                          0            0   0     0       NaN   \n",
-       "Vidal          M                          0            0   0     0       NaN   \n",
-       "Augustin       J                          0            0   0     0       NaN   \n",
-       "Furman         D                          0            0   0     0       NaN   \n",
-       "Cheyrou        B                          0            0   0     0       NaN   \n",
-       "Walongwa       A                          0            0   0     0       NaN   \n",
+       "Sa             R                          0            0   0     0  0.000000   \n",
+       "Beaulieu       J                          0            0   0     0  0.000000   \n",
+       "Mboumbouni     D                          0            0   0     0  0.000000   \n",
+       "Shamal         S                          0            0   0     0  0.000000   \n",
+       "Badin          C                          0            0   0     0  0.000000   \n",
+       "Chaouche       T                          0            0   0     0  0.000000   \n",
+       "Valette        B                          0            0   0     0  0.000000   \n",
+       "Vidal          M                          0            0   0     0  0.000000   \n",
+       "Augustin       J                          0            0   0     0  0.000000   \n",
+       "Furman         D                          0            0   0     0  0.000000   \n",
+       "Cheyrou        B                          0            0   0     0  0.000000   \n",
+       "Walongwa       A                          0            0   0     0  0.000000   \n",
        "Delle          J                          2            1   0     1  0.000000   \n",
-       "Saint-Ruf      N                          0            0   0     0       NaN   \n",
-       "Sotoca         F                          0            0   0     0       NaN   \n",
-       "Achilli        R                          0            0   0     0       NaN   \n",
-       "Cardinale      Y                          0            0   0     0       NaN   \n",
-       "Karamoko       H                          0            0   0     0       NaN   \n",
-       "Roman          M                          0            0   0     0       NaN   \n",
-       "Pinho          P                          0            0   0     0       NaN   \n",
-       "Jebbour        Y                          0            0   0     0       NaN   \n",
-       "Samba          B                          0            0   0     0       NaN   \n",
-       "Allee          Z                          0            0   0     0       NaN   \n",
-       "Reine-Adelaide J                          0            0   0     0       NaN   \n",
-       "Bertaud        D                          0            0   0     0       NaN   \n",
+       "Saint-Ruf      N                          0            0   0     0  0.000000   \n",
+       "Sotoca         F                          0            0   0     0  0.000000   \n",
+       "Achilli        R                          0            0   0     0  0.000000   \n",
+       "Cardinale      Y                          0            0   0     0  0.000000   \n",
+       "Karamoko       H                          0            0   0     0  0.000000   \n",
+       "Roman          M                          0            0   0     0  0.000000   \n",
+       "Pinho          P                          0            0   0     0  0.000000   \n",
+       "Jebbour        Y                          0            0   0     0  0.000000   \n",
+       "Samba          B                          0            0   0     0  0.000000   \n",
+       "Allee          Z                          0            0   0     0  0.000000   \n",
+       "Reine-Adelaide J                          0            0   0     0  0.000000   \n",
+       "Bertaud        D                          0            0   0     0  0.000000   \n",
        "N'Diaye        M                          2            1   0     1  0.000000   \n",
-       "Varela         M                          0            0   0     0       NaN   \n",
+       "Varela         M                          0            0   0     0  0.000000   \n",
        "Mendes         L                          3            2   0     1 -1.000000   \n",
        "Jug            A                          4            2   1     2 -1.000000   \n",
        "Spano          M                          7            4   0     3 -0.666667   \n",
@@ -2533,7 +2546,7 @@
        "[3045 rows x 22 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2544,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
