--- a/notebooks/prep/240_load_&_prep_Fantasy1314.ipynb
+++ b/notebooks/prep/240_load_&_prep_Fantasy1314.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "4       7    0    1   1    6      -      1              -           -   0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "SEA1314['Apps'] = SEA1314['Start'] + SEA1314['CO']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "SEA1314['Form'] = SEA1314['Points']/SEA1314['Apps']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "SEA1314.loc[SEA1314['Form'].isnull(),'Form'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -475,10 +508,12 @@
        "Goals conceded      0\n",
        "Conceded 1+         0\n",
        "OG                  0\n",
+       "Apps                0\n",
+       "Form                0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -501,29 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "SEA1314['Apps'] = SEA1314['Start'] + SEA1314['CO']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "SEA1314['Form'] = SEA1314['Points']/SEA1314['Apps']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +566,7 @@
       "Conceded 1+       2999 non-null object\n",
       "OG                2999 non-null int64\n",
       "Apps              2999 non-null int64\n",
-      "Form              2668 non-null float64\n",
+      "Form              2999 non-null float64\n",
       "dtypes: float64(1), int64(12), object(8)\n",
       "memory usage: 492.1+ KB\n"
      ]
@@ -565,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -580,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -605,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1489,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Lyes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1501,7 +1514,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Paul</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1526,7 +1539,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Pierre</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1551,7 +1564,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Quentin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1576,7 +1589,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Mikael</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1601,7 +1614,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>David</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1626,7 +1639,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Pierre-Yves</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1651,7 +1664,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Jerome</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1676,7 +1689,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Gautier</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1701,7 +1714,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Rachid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1726,7 +1739,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Clement</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1751,7 +1764,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Florian</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1776,7 +1789,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Amine</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1801,7 +1814,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Nicolas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1826,7 +1839,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Julian</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1851,7 +1864,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Omenuke</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1876,7 +1889,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Hugo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1901,7 +1914,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Jeffrey</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1926,7 +1939,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Leo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1951,7 +1964,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Paul</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1976,7 +1989,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Marc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2001,7 +2014,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Jeremy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2026,7 +2039,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Jordan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2051,7 +2064,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Damien</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2435,30 +2448,30 @@
        "Johnson     A              0    36  3.250000         Adam  \n",
        "Sagna       B              0    35  3.314286       Bacary  \n",
        "...                       ..   ...       ...          ...  \n",
-       "Houri       L              0     0       NaN         Lyes  \n",
-       "Babiloni    P              0     0       NaN         Paul  \n",
-       "Mela        P              0     0       NaN       Pierre  \n",
-       "Pereira     Q              0     0       NaN      Quentin  \n",
-       "Firmin      M              0     0       NaN       Mikael  \n",
-       "Sauget      D              0     0       NaN        David  \n",
-       "Polomat     P              0     0       NaN  Pierre-Yves  \n",
-       "Prior       J              0     0       NaN       Jerome  \n",
-       "Lloris      G              0     0       NaN      Gautier  \n",
-       "Ghezzal     R              0     0       NaN       Rachid  \n",
-       "Badin       C              0     0       NaN      Clement  \n",
-       "David       F              0     0       NaN      Florian  \n",
-       "Oudrhiri    A              0     0       NaN        Amine  \n",
-       "Saint-Ruf   N              0     0       NaN      Nicolas  \n",
-       "Jeanvier    J              0     0       NaN       Julian  \n",
-       "Mfulu       O              0     0       NaN      Omenuke  \n",
-       "Guichard    H              0     0       NaN         Hugo  \n",
-       "Assoumin    J              0     0       NaN      Jeffrey  \n",
-       "Dubois      L              0     0       NaN          Leo  \n",
-       "Baysse      P              0     0       NaN         Paul  \n",
-       "Vidal       M              0     0       NaN         Marc  \n",
-       "Malherbe    J              0     0       NaN       Jeremy  \n",
-       "Boy         J              0     0       NaN       Jordan  \n",
-       "Dussaut     D              0     0       NaN       Damien  \n",
+       "Houri       L              0     0  0.000000         Lyes  \n",
+       "Babiloni    P              0     0  0.000000         Paul  \n",
+       "Mela        P              0     0  0.000000       Pierre  \n",
+       "Pereira     Q              0     0  0.000000      Quentin  \n",
+       "Firmin      M              0     0  0.000000       Mikael  \n",
+       "Sauget      D              0     0  0.000000        David  \n",
+       "Polomat     P              0     0  0.000000  Pierre-Yves  \n",
+       "Prior       J              0     0  0.000000       Jerome  \n",
+       "Lloris      G              0     0  0.000000      Gautier  \n",
+       "Ghezzal     R              0     0  0.000000       Rachid  \n",
+       "Badin       C              0     0  0.000000      Clement  \n",
+       "David       F              0     0  0.000000      Florian  \n",
+       "Oudrhiri    A              0     0  0.000000        Amine  \n",
+       "Saint-Ruf   N              0     0  0.000000      Nicolas  \n",
+       "Jeanvier    J              0     0  0.000000       Julian  \n",
+       "Mfulu       O              0     0  0.000000      Omenuke  \n",
+       "Guichard    H              0     0  0.000000         Hugo  \n",
+       "Assoumin    J              0     0  0.000000      Jeffrey  \n",
+       "Dubois      L              0     0  0.000000          Leo  \n",
+       "Baysse      P              0     0  0.000000         Paul  \n",
+       "Vidal       M              0     0  0.000000         Marc  \n",
+       "Malherbe    J              0     0  0.000000       Jeremy  \n",
+       "Boy         J              0     0  0.000000       Jordan  \n",
+       "Dussaut     D              0     0  0.000000       Damien  \n",
        "Azouni      L              0     2 -0.500000        Larry  \n",
        "Mandrea     A              0     2 -0.500000      Anthony  \n",
        "Bocaly      G              0     3 -0.333333        Garry  \n",
@@ -2469,7 +2482,7 @@
        "[2999 rows x 22 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2480,7 +2493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
