--- a/notebooks/prep/300_Join_FIFA_Fantasy1718.ipynb
+++ b/notebooks/prep/300_Join_FIFA_Fantasy1718.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 118,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 119,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 121,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 122,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 124,
    "metadata": {
     "collapsed": true
    },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 125,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 126,
    "metadata": {
     "collapsed": true
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 128,
    "metadata": {
     "collapsed": true
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 131,
    "metadata": {
     "collapsed": true
    },
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1211,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1428,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1440,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1533,7 @@
        "[1 rows x 210 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1901,7 +1901,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Johannes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1925,7 +1925,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Costel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1973,7 +1973,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Mitchell</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1997,7 +1997,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Mitchell</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2021,7 +2021,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Isaac</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2238,12 +2238,12 @@
        "607        0     0              0           0   0     1  1.000000     Divock  \n",
        "608        0     0              0           0   0    26  2.846154     Divock  \n",
        "733        0     0             14           8   0    11  2.090909   Johannes  \n",
-       "734        0     0              0           0   0     0       NaN   Johannes  \n",
-       "873        0     0              0           0   0     0       NaN     Costel  \n",
+       "734        0     0              0           0   0     0  0.000000   Johannes  \n",
+       "873        0     0              0           0   0     0  0.000000     Costel  \n",
        "874        0     0              9           4   0     6  2.000000     Costel  \n",
-       "1187       0     0              0           0   0     0       NaN   Mitchell  \n",
-       "1188       0     0              0           0   0     0       NaN   Mitchell  \n",
-       "1286       0     0              0           0   0     0       NaN      Isaac  \n",
+       "1187       0     0              0           0   0     0  0.000000   Mitchell  \n",
+       "1188       0     0              0           0   0     0  0.000000   Mitchell  \n",
+       "1286       0     0              0           0   0     0  0.000000      Isaac  \n",
        "1287       0     0              0           0   0     6  1.666667      Isaac  \n",
        "1715       0     0              0           0   0     1  1.000000      Reece  \n",
        "1716       0     0              0           0   0     6  1.666667      Reece  \n",
@@ -2253,7 +2253,7 @@
        "[23 rows x 210 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2265,8 +2265,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 136,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "d = {\n",
@@ -2477,13 +2479,13 @@
     " 'OG':'sum',\n",
     " 'Firstname':'first',\n",
     " 'Apps':'sum',\n",
-    " 'Form':'sum' \n",
+    " 'Form': 'mean'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -2552,7 +2554,7 @@
        "      <td>10</td>\n",
        "      <td>1</td>\n",
        "      <td>23</td>\n",
-       "      <td>6.434211</td>\n",
+       "      <td>3.217105</td>\n",
        "      <td>Aymeric</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2600,7 +2602,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>21</td>\n",
-       "      <td>7.972222</td>\n",
+       "      <td>3.986111</td>\n",
        "      <td>Michy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2624,7 +2626,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>16</td>\n",
-       "      <td>3.253968</td>\n",
+       "      <td>1.626984</td>\n",
        "      <td>Francis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2648,7 +2650,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>29</td>\n",
-       "      <td>3.884615</td>\n",
+       "      <td>1.942308</td>\n",
        "      <td>Nordin</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2679,16 +2681,16 @@
        "4  Spanish Primera Division  1987-03-31      181.0    ...      12   9       0   \n",
        "\n",
        "  Pen M Goals conceded Conceded 1+  OG  Apps      Form  Firstname  \n",
-       "0     0             24          10   1    23  6.434211    Aymeric  \n",
+       "0     0             24          10   1    23  3.217105    Aymeric  \n",
        "1     0              0           0   0    19  2.000000    Gonzalo  \n",
-       "2     0              0           0   1    21  7.972222      Michy  \n",
-       "3     0              0           0   0    16  3.253968    Francis  \n",
-       "4     0              0           0   0    29  3.884615     Nordin  \n",
+       "2     0              0           0   1    21  3.986111      Michy  \n",
+       "3     0              0           0   0    16  1.626984    Francis  \n",
+       "4     0              0           0   0    29  1.942308     Nordin  \n",
        "\n",
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2700,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -2862,7 +2864,7 @@
        "11      22  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2873,7 +2875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 139,
    "metadata": {
     "collapsed": true
    },
@@ -2885,7 +2887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 140,
    "metadata": {
     "collapsed": true
    },
@@ -2896,7 +2898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -3101,7 +3103,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3112,7 +3114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 142,
    "metadata": {
     "collapsed": true
    },
