--- a/notebooks/prep/330_Join_FIFA_Fantasy1415.ipynb
+++ b/notebooks/prep/330_Join_FIFA_Fantasy1415.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Shinji</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1197,14 +1197,14 @@
        "    Pen M Goals conceded Conceded 1+  OG  Apps      Form  Firstname  \n",
        "196     0              0           0   0     3  1.000000    Mohamed  \n",
        "197     0              0           0   0    16  4.062500    Mohamed  \n",
-       "215     0              0           0   0     0       NaN     Shinji  \n",
+       "215     0              0           0   0     0  0.000000     Shinji  \n",
        "216     0              0           0   0    28  3.178571     Shinji  \n",
        "322     0              0           0   0     9  2.555556    Xherdan  \n",
        "\n",
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1333,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Shinji</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1414,14 +1414,14 @@
        "    Pen M Goals conceded Conceded 1+  OG  Apps      Form  Firstname  \n",
        "196     0              0           0   0     3  1.000000    Mohamed  \n",
        "197     0              0           0   0    16  4.062500    Mohamed  \n",
-       "215     0              0           0   0     0       NaN     Shinji  \n",
+       "215     0              0           0   0     0  0.000000     Shinji  \n",
        "216     0              0           0   0    28  3.178571     Shinji  \n",
        "322     0              0           0   0     9  2.555556    Xherdan  \n",
        "\n",
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1526,7 @@
        "[1 rows x 210 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1654,7 +1654,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Shinji</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1735,14 +1735,14 @@
        "    Pen M Goals conceded Conceded 1+  OG  Apps      Form  Firstname  \n",
        "196     0              0           0   0     3  1.000000    Mohamed  \n",
        "197     0              0           0   0    16  4.062500    Mohamed  \n",
-       "215     0              0           0   0     0       NaN     Shinji  \n",
+       "215     0              0           0   0     0  0.000000     Shinji  \n",
        "216     0              0           0   0    28  3.178571     Shinji  \n",
        "322     0              0           0   0     9  2.555556    Xherdan  \n",
        "\n",
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1754,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -1968,13 +1968,13 @@
     " 'OG':'sum',\n",
     " 'Firstname':'first',\n",
     " 'Apps':'sum',\n",
-    " 'Form':'sum'\n",
+    " 'Form': 'mean'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2043,7 +2043,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>19</td>\n",
-       "      <td>5.062500</td>\n",
+       "      <td>2.531250</td>\n",
        "      <td>Mohamed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2067,7 +2067,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>28</td>\n",
-       "      <td>3.178571</td>\n",
+       "      <td>1.589286</td>\n",
        "      <td>Shinji</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2091,7 +2091,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>24</td>\n",
-       "      <td>4.622222</td>\n",
+       "      <td>2.311111</td>\n",
        "      <td>Xherdan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2115,7 +2115,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>29</td>\n",
-       "      <td>4.754902</td>\n",
+       "      <td>2.377451</td>\n",
        "      <td>Juan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2139,7 +2139,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>25</td>\n",
-       "      <td>5.041667</td>\n",
+       "      <td>2.520833</td>\n",
        "      <td>Javier</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2170,16 +2170,16 @@
        "4  English Premier League  1988-06-01      175.0    ...      17   3       0   \n",
        "\n",
        "  Pen M Goals conceded Conceded 1+  OG  Apps      Form  Firstname  \n",
-       "0     0              0           0   0    19  5.062500    Mohamed  \n",
-       "1     0              0           0   0    28  3.178571     Shinji  \n",
-       "2     0              0           0   0    24  4.622222    Xherdan  \n",
-       "3     0              0           0   0    29  4.754902       Juan  \n",
-       "4     0              0           0   0    25  5.041667     Javier  \n",
+       "0     0              0           0   0    19  2.531250    Mohamed  \n",
+       "1     0              0           0   0    28  1.589286     Shinji  \n",
+       "2     0              0           0   0    24  2.311111    Xherdan  \n",
+       "3     0              0           0   0    29  2.377451       Juan  \n",
+       "4     0              0           0   0    25  2.520833     Javier  \n",
        "\n",
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2191,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2413,7 +2413,7 @@
        "17      28  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2424,7 +2424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -2436,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -2447,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2652,7 +2652,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2663,7 +2663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
