--- a/notebooks/prep/340_Join_FIFA_Fantasy1314.ipynb
+++ b/notebooks/prep/340_Join_FIFA_Fantasy1314.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1204,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1421,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1526,7 @@
        "[1 rows x 210 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1742,7 +1742,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1754,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -1968,13 +1968,13 @@
     " 'OG':'sum',\n",
     " 'Firstname':'first',\n",
     " 'Apps':'sum',\n",
-    " 'Form':'sum'\n",
+    " 'Form': 'mean'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2043,7 +2043,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>19</td>\n",
-       "      <td>6.208333</td>\n",
+       "      <td>3.104167</td>\n",
        "      <td>Kevin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2067,7 +2067,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>28</td>\n",
-       "      <td>6.076923</td>\n",
+       "      <td>3.038462</td>\n",
        "      <td>Mesut</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2091,7 +2091,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
-       "      <td>3.285714</td>\n",
+       "      <td>1.642857</td>\n",
        "      <td>Moussa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2115,7 +2115,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>32</td>\n",
-       "      <td>4.766667</td>\n",
+       "      <td>2.383333</td>\n",
        "      <td>Marko</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2170,16 +2170,16 @@
        "4       German Bundesliga  1987-06-11      172.0    ...       0  11       0   \n",
        "\n",
        "  Pen M Goals conceded Conceded 1+  OG  Apps      Form  Firstname  \n",
-       "0     0              0           0   0    19  6.208333      Kevin  \n",
-       "1     0              0           0   0    28  6.076923      Mesut  \n",
-       "2     0              0           0   0    30  3.285714     Moussa  \n",
-       "3     0              0           0   0    32  4.766667      Marko  \n",
+       "0     0              0           0   0    19  3.104167      Kevin  \n",
+       "1     0              0           0   0    28  3.038462      Mesut  \n",
+       "2     0              0           0   0    30  1.642857     Moussa  \n",
+       "3     0              0           0   0    32  2.383333      Marko  \n",
        "4     0             38          14   0    30  3.533333    Gonzalo  \n",
        "\n",
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2191,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2433,7 +2433,7 @@
        "19               Adel Taarabt     FFC      68  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2444,7 +2444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -2456,7 +2456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -2467,7 +2467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2672,7 +2672,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2683,7 +2683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
