--- a/notebooks/prep/350_Join_FIFA_Fantasy1213.ipynb
+++ b/notebooks/prep/350_Join_FIFA_Fantasy1213.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Stefan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1197,14 +1197,14 @@
        "     Pen SV Pen M Goals conceded Conceded 1+  OG  Apps      Form  Firstname  \n",
        "29        0     0             29          11   0    27  2.925926       Hugo  \n",
        "30        0     0              2           0   0     2  2.000000       Hugo  \n",
-       "223       0     0              0           0   0     0       NaN     Stefan  \n",
+       "223       0     0              0           0   0     0  0.000000     Stefan  \n",
        "224       0     0             33          16   0    26  2.884615     Stefan  \n",
        "245       0     0              0           0   0    14  1.928571      Mario  \n",
        "\n",
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1333,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Stefan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1414,14 +1414,14 @@
        "     Pen SV Pen M Goals conceded Conceded 1+  OG  Apps      Form  Firstname  \n",
        "29        0     0             29          11   0    27  2.925926       Hugo  \n",
        "30        0     0              2           0   0     2  2.000000       Hugo  \n",
-       "223       0     0              0           0   0     0       NaN     Stefan  \n",
+       "223       0     0              0           0   0     0  0.000000     Stefan  \n",
        "224       0     0             33          16   0    26  2.884615     Stefan  \n",
        "245       0     0              0           0   0    14  1.928571      Mario  \n",
        "\n",
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1526,7 @@
        "[1 rows x 210 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1654,7 +1654,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Stefan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1735,14 +1735,14 @@
        "     Pen SV Pen M Goals conceded Conceded 1+  OG  Apps      Form  Firstname  \n",
        "29        0     0             29          11   0    27  2.925926       Hugo  \n",
        "30        0     0              2           0   0     2  2.000000       Hugo  \n",
-       "223       0     0              0           0   0     0       NaN     Stefan  \n",
+       "223       0     0              0           0   0     0  0.000000     Stefan  \n",
        "224       0     0             33          16   0    26  2.884615     Stefan  \n",
        "245       0     0              0           0   0    14  1.928571      Mario  \n",
        "\n",
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1754,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -1968,13 +1968,13 @@
     " 'OG':'sum',\n",
     " 'Firstname':'first',\n",
     " 'Apps':'sum',\n",
-    " 'Form':'sum'\n",
+    " 'Form': 'mean'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2043,7 +2043,7 @@
        "      <td>11</td>\n",
        "      <td>0</td>\n",
        "      <td>29</td>\n",
-       "      <td>4.925926</td>\n",
+       "      <td>2.462963</td>\n",
        "      <td>Hugo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2067,7 +2067,7 @@
        "      <td>16</td>\n",
        "      <td>0</td>\n",
        "      <td>26</td>\n",
-       "      <td>2.884615</td>\n",
+       "      <td>1.442308</td>\n",
        "      <td>Stefan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2091,7 +2091,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>27</td>\n",
-       "      <td>8.005495</td>\n",
+       "      <td>4.002747</td>\n",
        "      <td>Mario</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2139,7 +2139,7 @@
        "      <td>8</td>\n",
        "      <td>0</td>\n",
        "      <td>22</td>\n",
-       "      <td>5.666667</td>\n",
+       "      <td>2.833333</td>\n",
        "      <td>Matija</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2170,16 +2170,16 @@
        "4         German Bundesliga  1993-03-28      188.0    ...       0   2       0   \n",
        "\n",
        "  Pen M Goals conceded Conceded 1+  OG  Apps      Form  Firstname  \n",
-       "0     0             31          11   0    29  4.925926       Hugo  \n",
-       "1     0             33          16   0    26  2.884615     Stefan  \n",
-       "2     0              0           0   0    27  8.005495      Mario  \n",
+       "0     0             31          11   0    29  2.462963       Hugo  \n",
+       "1     0             33          16   0    26  1.442308     Stefan  \n",
+       "2     0              0           0   0    27  4.002747      Mario  \n",
        "3     0             38          16   0    31  3.677419    Gonzalo  \n",
-       "4     0             19           8   0    22  5.666667     Matija  \n",
+       "4     0             19           8   0    22  2.833333     Matija  \n",
        "\n",
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2191,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2413,7 +2413,7 @@
        "17      25  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2424,7 +2424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -2436,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -2447,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2652,7 +2652,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2663,7 +2663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
