--- a/notebooks/prep/250_load_&_prep_Fantasy1213.ipynb
+++ b/notebooks/prep/250_load_&_prep_Fantasy1213.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "4       1    0    1   1   11      -      0              -           -   0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "SEA1213['Apps'] = SEA1213['Start'] + SEA1213['CO']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "SEA1213['Form'] = SEA1213['Points']/SEA1213['Apps']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "SEA1213.loc[SEA1213['Form'].isnull(),'Form'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -475,10 +508,12 @@
        "Goals conceded      0\n",
        "Conceded 1+         0\n",
        "OG                  0\n",
+       "Apps                0\n",
+       "Form                0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -501,29 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "SEA1213['Apps'] = SEA1213['Start'] + SEA1213['CO']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "SEA1213['Form'] = SEA1213['Points']/SEA1213['Apps']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +566,7 @@
       "Conceded 1+       3096 non-null object\n",
       "OG                3096 non-null int64\n",
       "Apps              3096 non-null int64\n",
-      "Form              2683 non-null float64\n",
+      "Form              3096 non-null float64\n",
       "dtypes: float64(1), int64(12), object(8)\n",
       "memory usage: 508.0+ KB\n"
      ]
@@ -565,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -580,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -605,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1489,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Gael</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1501,7 +1514,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Zakarie</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1526,7 +1539,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Pape</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1551,7 +1564,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Jeremy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1576,7 +1589,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Hervin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1601,7 +1614,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Romain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1626,7 +1639,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Ryan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1676,7 +1689,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Gael</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1701,7 +1714,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Julian</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1726,7 +1739,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Kevin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1751,7 +1764,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Nicolas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1776,7 +1789,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Guillaume</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1801,7 +1814,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Wesley</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1826,7 +1839,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Jordan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1851,7 +1864,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Victor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1876,7 +1889,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Mohammad</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1901,7 +1914,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Alexis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1926,7 +1939,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>Adrien</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2435,25 +2448,25 @@
        "Mertesacker    P                         30           10   0    34  3.588235   \n",
        "Maloney        S                          0            0   0    36  3.361111   \n",
        "...                                     ...          ...  ..   ...       ...   \n",
-       "Andonian       G                          0            0   0     0       NaN   \n",
-       "Labidi         Z                          0            0   0     0       NaN   \n",
-       "M'Bow          P                          0            0   0     0       NaN   \n",
-       "Frick          J                          0            0   0     0       NaN   \n",
-       "Ongenda        H                          0            0   0     0       NaN   \n",
-       "Achilli        R                          0            0   0     0       NaN   \n",
-       "Mason          R                          0            0   0     0       NaN   \n",
+       "Andonian       G                          0            0   0     0  0.000000   \n",
+       "Labidi         Z                          0            0   0     0  0.000000   \n",
+       "M'Bow          P                          0            0   0     0  0.000000   \n",
+       "Frick          J                          0            0   0     0  0.000000   \n",
+       "Ongenda        H                          0            0   0     0  0.000000   \n",
+       "Achilli        R                          0            0   0     0  0.000000   \n",
+       "Mason          R                          0            0   0     0  0.000000   \n",
        "Camacho        R                          2            1   0     1  0.000000   \n",
-       "Vena           G                          0            0   0     0       NaN   \n",
-       "Michel         J                          0            0   0     0       NaN   \n",
-       "Crepel         K                          0            0   0     0       NaN   \n",
-       "Staerck-Weille N                          0            0   0     0       NaN   \n",
-       "Legras         G                          0            0   0     0       NaN   \n",
-       "Said           W                          0            0   0     0       NaN   \n",
-       "Astier         J                          0            0   0     0       NaN   \n",
-       "Rousseau       V                          0            0   0     0       NaN   \n",
-       "Hamzaoui       M                          0            0   0     0       NaN   \n",
-       "Busin          A                          0            0   0     0       NaN   \n",
-       "Hunou          A                          0            0   0     0       NaN   \n",
+       "Vena           G                          0            0   0     0  0.000000   \n",
+       "Michel         J                          0            0   0     0  0.000000   \n",
+       "Crepel         K                          0            0   0     0  0.000000   \n",
+       "Staerck-Weille N                          0            0   0     0  0.000000   \n",
+       "Legras         G                          0            0   0     0  0.000000   \n",
+       "Said           W                          0            0   0     0  0.000000   \n",
+       "Astier         J                          0            0   0     0  0.000000   \n",
+       "Rousseau       V                          0            0   0     0  0.000000   \n",
+       "Hamzaoui       M                          0            0   0     0  0.000000   \n",
+       "Busin          A                          0            0   0     0  0.000000   \n",
+       "Hunou          A                          0            0   0     0  0.000000   \n",
        "Kembo-Ekoko    J                          0            0   0     1 -1.000000   \n",
        "Leca           J                          0            0   0     0      -inf   \n",
        "Chardonnet     B                          3            2   0     1 -1.000000   \n",
@@ -2533,7 +2546,7 @@
        "[3096 rows x 22 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2544,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
