--- a/notebooks/prep/310_Join_FIFA_Fantasy1617.ipynb
+++ b/notebooks/prep/310_Join_FIFA_Fantasy1617.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1211,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1428,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1440,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1533,7 @@
        "[1 rows x 210 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1761,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -1975,13 +1975,13 @@
     " 'OG':'sum',\n",
     " 'Firstname':'first',\n",
     " 'Apps':'sum',\n",
-    " 'Form':'sum'\n",
+    " 'Form': 'mean'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2050,7 +2050,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
-       "      <td>5.384615</td>\n",
+       "      <td>2.692308</td>\n",
        "      <td>Julian</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2074,7 +2074,7 @@
        "      <td>16</td>\n",
        "      <td>0</td>\n",
        "      <td>27</td>\n",
-       "      <td>0.923077</td>\n",
+       "      <td>0.461538</td>\n",
        "      <td>Shkodran</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2098,7 +2098,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>33</td>\n",
-       "      <td>7.055556</td>\n",
+       "      <td>3.527778</td>\n",
        "      <td>Dimitri</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2122,7 +2122,7 @@
        "      <td>11</td>\n",
        "      <td>0</td>\n",
        "      <td>23</td>\n",
-       "      <td>3.772727</td>\n",
+       "      <td>1.886364</td>\n",
        "      <td>Claudio</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2177,16 +2177,16 @@
        "4       German Bundesliga  1987-06-11      172.0    ...       5  10       0   \n",
        "\n",
        "  Pen M Goals conceded Conceded 1+  OG  Apps      Form  Firstname  \n",
-       "0     0              0           0   0    30  5.384615     Julian  \n",
-       "1     0             35          16   0    27  0.923077   Shkodran  \n",
-       "2     0              0           0   0    33  7.055556    Dimitri  \n",
-       "3     0             28          11   0    23  3.772727    Claudio  \n",
+       "0     0              0           0   0    30  2.692308     Julian  \n",
+       "1     0             35          16   0    27  0.461538   Shkodran  \n",
+       "2     0              0           0   0    33  3.527778    Dimitri  \n",
+       "3     0             28          11   0    23  1.886364    Claudio  \n",
        "4     0              0           0   0    28  2.821429    Gonzalo  \n",
        "\n",
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2198,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2520,7 +2520,7 @@
        "27      13  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2531,7 +2531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -2543,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -2554,7 +2554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2759,7 +2759,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2770,7 +2770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
