--- a/notebooks/prep/320_Join_FIFA_Fantasy1516.ipynb
+++ b/notebooks/prep/320_Join_FIFA_Fantasy1516.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1204,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1421,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1526,7 @@
        "[1 rows x 210 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1742,7 +1742,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1754,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -1968,13 +1968,13 @@
     " 'OG':'sum',\n",
     " 'Firstname':'first',\n",
     " 'Apps':'sum',\n",
-    " 'Form':'sum'\n",
+    " 'Form': 'mean'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2043,7 +2043,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>27</td>\n",
-       "      <td>6.020000</td>\n",
+       "      <td>3.010000</td>\n",
        "      <td>Kevin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2067,7 +2067,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>36</td>\n",
-       "      <td>7.676471</td>\n",
+       "      <td>3.838235</td>\n",
        "      <td>Ivan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2091,7 +2091,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>22</td>\n",
-       "      <td>6.214286</td>\n",
+       "      <td>3.107143</td>\n",
        "      <td>Ciro</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2115,7 +2115,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>34</td>\n",
-       "      <td>6.698925</td>\n",
+       "      <td>3.349462</td>\n",
        "      <td>Anthony</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2139,7 +2139,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>29</td>\n",
-       "      <td>3.278846</td>\n",
+       "      <td>1.639423</td>\n",
        "      <td>Florian</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2170,16 +2170,16 @@
        "4          French Ligue 1  1993-01-26      179.0    ...      15   9       0   \n",
        "\n",
        "  Pen M Goals conceded Conceded 1+  OG  Apps      Form  Firstname  \n",
-       "0     0              0           0   0    27  6.020000      Kevin  \n",
-       "1     0              0           0   0    36  7.676471       Ivan  \n",
-       "2     1              0           0   0    22  6.214286       Ciro  \n",
-       "3     0              0           0   0    34  6.698925    Anthony  \n",
-       "4     0              0           0   0    29  3.278846    Florian  \n",
+       "0     0              0           0   0    27  3.010000      Kevin  \n",
+       "1     0              0           0   0    36  3.838235       Ivan  \n",
+       "2     1              0           0   0    22  3.107143       Ciro  \n",
+       "3     0              0           0   0    34  3.349462    Anthony  \n",
+       "4     0              0           0   0    29  1.639423    Florian  \n",
        "\n",
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2191,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2563,7 +2563,7 @@
        "32     CHIE      47  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2574,7 +2574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -2586,7 +2586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -2597,7 +2597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2802,7 +2802,7 @@
        "[5 rows x 210 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2813,7 +2813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
